<resources>
    <string name="app_name">App kelly</string>
    //Principal
    <string name="tvTitulo">Parqueadero</string>
    <string name="etCorreo">Correo Institucional</string>
    <string name="etContra">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="tvTitulo2">Mi QR</string>
    <string name="btnScan">Scanear</string>
    //principal celadores
    <string name="tvTitulo3">¿Qué QR vas a escanear?</string>
    <string name="btnIngreso">Ingreso</string>
    <string name="btnSalida">Salida</string>
    <string name="btnCerrarSesion">Cerrar Sesión</string>
<<<<<<< HEAD
    //Usuario
    <string name="tvTitulo4">Perfil</string>
    <string name="btnRegistros">Mis Registros</string>
    <string name="tvTitulo5">Registros</string>
=======
    <string name="etCorreo2">Correo Institucional</string>
    <string name="etContra2">Contraseña</string>
    <string name="etName">Ingresa tu nombre</string>
    <string name="btnRegister">Registrarse</string>
    <string name="etPlaca">Número de Placa</string>
    <string name="etModelo">Modelo del vehículo</string>
    <string-array name="vehiculos">
        <item>Moto</item>
        <item>Bicicleta</item>
    </string-array>
>>>>>>> 7381b27cb3febc2d5f4770e7bbf14f96983e3cf7
</resources>