<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Principal_Estu"
    android:background="@color/gris">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="55dp"
        android:layout_height="47dp"
        app:srcCompat="@drawable/baseline_menu_24"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="1dp" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:text="@string/tvTitulo"
        android:textSize="28sp"
        android:layout_marginTop="-47dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="130dp"/>

    <ImageView
        android:id="@+id/imageView3"
        style="@style/CardView.Dark"
        android:layout_width="55dp"
        android:layout_height="47dp"
        android:layout_marginLeft="355dp"
        android:layout_marginTop="-45dp"
        app:srcCompat="@drawable/descarga"
        android:alpha="0.4"/>



    <androidx.cardview.widget.CardView
        android:layout_width="390dp"
        android:layout_marginLeft="10dp"
        android:layout_height="590dp"
        app:cardCornerRadius="40dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <EditText
            android:id="@+id/etCorreo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/etCorreo2"
            android:inputType="textEmailAddress"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/etContra2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etContra2"
            android:inputType="textPassword" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etName"
                android:inputType="text"
                android:text="@string/etName" />

            <Spinner
            android:id="@+id/spVehiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/etPlaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etPlaca"
                android:inputType="text"
                android:text="@string/etPlaca" />

            <EditText
                android:id="@+id/etModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etModelo"
                android:inputType="text"
                android:text="@string/etModelo" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:text="@string/btnRegister"></Button>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>