<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Principal_Estu"
    android:background="@color/gris">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:text="@string/tvTitulo"
        android:textSize="28sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="120dp"/>
    <ImageView
        android:id="@+id/imageView3"
        style="@style/CardView.Dark"
        android:layout_width="55dp"
        android:layout_height="47dp"
        android:layout_marginLeft="355dp"
        android:layout_marginTop="-45dp"
        app:srcCompat="@drawable/descarga"
        android:alpha="0.4"/>



    <androidx.cardview.widget.CardView
        android:layout_width="390dp"
        android:layout_marginLeft="10dp"
        android:layout_height="590dp"
        app:cardCornerRadius="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitulo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/tvTitulo3"
                android:textAlignment="center"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btnIngreso"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="30dp"
                android:textSize="30sp"
                android:text="@string/btnIngreso"/>

            <Button
                android:id="@+id/btnSalida"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:textSize="30sp"
                android:layout_marginTop="-70dp"
                android:layout_marginLeft="200dp"
                android:text="@string/btnSalida" />

            <ImageView
                android:id="@+id/qrCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnCerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="28sp"
                android:layout_marginTop="40dp"
                android:text="@string/btnCerrarSesion"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>