<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Principal_Estu"
    android:background="@color/gris">

    <ImageButton
        android:id="@+id/ibPrincipal"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/baseline_menu_24"
        android:background="@android:color/transparent"
        android:contentDescription="Principal"/>

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:text="@string/tvTitulo"
        android:textSize="28sp"
        android:layout_marginTop="-47dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginLeft="130dp"/>

    <ImageView
        android:id="@+id/imageView3"
        style="@style/CardView.Dark"
        android:layout_width="55dp"
        android:layout_height="47dp"
        android:layout_marginLeft="355dp"
        android:layout_marginTop="-45dp"
        app:srcCompat="@drawable/descarga"
        android:alpha="0.4"/>



    <androidx.cardview.widget.CardView
        android:layout_width="390dp"
        android:layout_marginLeft="10dp"
        android:layout_height="590dp"
        app:cardCornerRadius="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/transparent">


            <TextView
                android:id="@+id/tvTitulo4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="120dp"
                android:text="@string/tvTitulo4"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="28dp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="240dp"
                android:layout_height="160dp"
                android:layout_marginLeft="75dp"
                app:srcCompat="@drawable/baseline_account_box_24" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:textSize="28dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/tvPlaca"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:textSize="28dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/tvModel"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:textSize="28dp"
                android:text="TextView" />

            <Button
                android:id="@+id/btnRegistros"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/btnRegistros" />

            <Button
                android:id="@+id/btnCerrarSesion"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:text="@string/btnCerrarSesion" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>